# t212

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: screenshots.py
src/t212/: app.py  charts.py  cli.py  config.py  formatting.py  models.py  pagination.py  resolve.py  scheduler.py  store.py  summary.py  theming.py
src/t212/api/: base.py  http.py  limits.py  mock.py  ratelimit.py
src/t212/sample_data/: dividends.json  exchanges.json  history_orders.json  history_orders_page2.json  instruments.json  pie_detail.json  positions.json  transactions.json
src/t212/screens/: dashboard.py  focus.py  help.py  history.py  instrument_detail.py  pie_detail.py  pies.py  position_detail.py  positions.py  search.py  setup.py
src/t212/widgets/: hintbar.py  modal.py  render.py  styles.tcss  summary_header.py  tabbar.py
tests/: test_app_shell.py  test_charts.py  test_cli.py  test_config.py  test_focus.py  test_formatting.py  test_hintbar.py  test_http_client.py  test_limits.py  test_mock_client.py  test_modals.py  test_models.py  test_pagination.py  test_ratelimit.py  test_refresh.py  test_render.py  test_resilience.py  test_resolve.py  test_responsive.py  test_scheduler.py  test_screen_dashboard.py  test_screen_history.py  test_screen_pies.py  test_screen_positions.py  test_screen_search.py  test_setup.py  test_store.py  test_summary.py  test_theming.py
tests/fixtures/: account_info.json  cash.json  dividends.json  exchanges.json  history_orders.json  instruments.json  orders.json  pie_detail.json  pies.json  portfolio.json  summary.json  transactions.json
