[project]
name = "t212-tui"
version = "0.3.0"
description = "Read-only Trading 212 portfolio terminal"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "shadowhusky" }]
keywords = ["trading212", "tui", "terminal", "portfolio", "textual"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.85",
    "textual-plotext>=0.2.1",
    "httpx>=0.27",
    "pydantic>=2.6",
    "click>=8.1",
]

[project.urls]
Repository = "https://github.com/Shadowhusky/t212"

[project.scripts]
t212 = "t212.cli:main"
t212-tui = "t212.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "textual-dev>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.build-backend]
module-name = "t212"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
